force-app/main/default/objects/MaintenanceRequest__c/fields/ClosureReportFileId__c.field-meta.xml
<CustomField>
    <fullName>ClosureReportFileId__c</fullName>
    <label>Closure Report File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>