force-app/main/default/objects/MaintenanceRequest__c/fields/CostEstimate__c.field-meta.xml
<CustomField>
    <fullName>CostEstimate__c</fullName>
    <label>Cost Estimate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>