force-app/main/default/objects/MaintenanceRequest__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lease</label>
    <referenceTo>Lease__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>MaintenanceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>