force-app/main/default/objects/MaintenanceRequest__c/fields/MaintKey__c.field-meta.xml
<CustomField>
    <fullName>MaintKey__c</fullName>
    <description>Optional external key for imports/mapping.</description>
    <externalId>true</externalId>
    <label>Maintenance Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>