force-app/main/default/objects/MaintenanceRequest__c/fields/RequestedAt__c.field-meta.xml
<CustomField>
    <fullName>RequestedAt__c</fullName>
    <label>Requested At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>