force-app/main/default/objects/MaintenanceRequest__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>MaintenanceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>