force-app/main/default/objects/MaintenanceRequest__c/fields/VendorName__c.field-meta.xml
<CustomField>
    <fullName>VendorName__c</fullName>
    <label>Vendor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>