force-app/main/default/objects/MaintenanceRequest__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <description>Enforce Description__c for LongTextArea.</description>
    <errorConditionFormula>ISBLANK( Description__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description is required.</errorMessage>
</ValidationRule>