force-app/main/default/objects/MaintenanceRequest__c/validationRules/Require_Vendor_When_InProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Vendor_When_InProgress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;InProgress&quot;),
    ISBLANK(VendorName__c)
)</errorConditionFormula>
    <errorDisplayField>VendorName__c</errorDisplayField>
    <errorMessage>Vendor Name is required when Maintenance Request status is In Progress.</errorMessage>
</ValidationRule>